--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,25 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
+  <ion-toolbar> <ion-title>Home</ion-title> </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <h2>With the following methods I am able to reproduce the issue in about one third of cases:</h2><br />
+  - Try refreshing the page / and or switching tabs afterwards. <br />
+  - Try to load the page in the About tab and then switch over. <br />
+  - Try with and without developer tools open. <br />
+  - Try CTRL+F5 refresh. <br />
+  <ion-slides>
+    <ion-slide>
+      <h1>Slide 1</h1>
+      Some content here in slide 1
+    </ion-slide>
+    <ion-slide>
+      <h1>Slide 2</h1>
+      Some content in slide 2!
+    </ion-slide>
+    <ion-slide>
+      <h1>Slide 3</h1>
+      Some content in slide 3
+    </ion-slide>
+  </ion-slides>
 </ion-content>
